@@ -18,7 +18,7 @@
  * along with this program; if not, see <http://www.gnu.org/licenses/>.
  */
 
-/* $Id: avatarsay.c,v 2.251 2008-12-02 11:31:28 akf Exp $ */
+/* $Id: avatarsay.c,v 2.252 2008-12-02 23:04:05 akf Exp $ */
 
 #ifndef _GNU_SOURCE
 #  define _GNU_SOURCE
@@ -40,7 +40,6 @@
 #include <getopt.h>
 
 #ifdef __WIN32__
-#  include <windows.h>
 #  define NO_MANPAGES 1
 #  ifdef __MINGW32__
 #    define NO_PTY 1
@@ -319,33 +318,7 @@ not_available (void)
 
 #ifdef __WIN32__
 
-/* get user's home direcory - Windows */
-void
-get_user_home (char *home_dir, size_t size)
-{
-  char *homepath, *homedrive;
-
-  homepath = getenv ("HOMEPATH");
-  homedrive = getenv ("HOMEDRIVE");
-
-  /* do we need to add the drive-letter? */
-  if (homedrive && homepath && *(homepath + 1) != ':'
-      && *(homepath + 1) != '\\')
-    {
-      strncpy (home_dir, homedrive, size);
-      strncat (home_dir, homepath, size - strlen (home_dir) - 1);
-    }
-  else if (homepath)
-    {
-      strncpy (home_dir, homepath, size);
-      if (size > 0)
-	home_dir[size - 1] = '\0';
-    }
-  else if (size >= 4)
-    strcpy (home_dir, "C:\\");
-  else				/* worst case */
-    home_dir[0] = '\0';
-}
+void get_user_home (char *home_dir, size_t size);
 
 #else /* not __WIN32__ */
 
@@ -2228,18 +2201,7 @@ ask_manpage (void)
 
 #ifdef __WIN32__
 
-static void
-edit_file (const char *name)
-{
-  ShellExecute (NULL, "open", "notepad.exe", name, NULL /* dir */ ,
-		SW_SHOWMAXIMIZED);
-
-  /*
-   * program returns immediately,
-   * so leave some time to see the message
-   */
-  avt_wait (AVT_SECONDS (5));
-}
+extern void edit_file (const char *name);
 
 #else /* not Windows or ReactOS */
 
@@ -2800,7 +2762,7 @@ main (int argc, char *argv[])
   exit (EXIT_SUCCESS);
 
   /* never executed, but kept in the code */
-  puts ("$Id: avatarsay.c,v 2.251 2008-12-02 11:31:28 akf Exp $");
+  puts ("$Id: avatarsay.c,v 2.252 2008-12-02 23:04:05 akf Exp $");
 
   return EXIT_SUCCESS;
 }
