@@ -5,6 +5,10 @@
 	* avtmsg.c (info_msg):
 	new function
 	avatarsay.c (showversion): adapted
+	
+	* mingw/avtwindows.c:
+	new file - separating out windows specific stuff
+	avatarsay.c, avtfilechooser.c: adapted
 
 2008-11-22  Andreas K. Foerster  <info@akfoerster.de>
 
